# QuadTree-Implementation

./: .gitignore  CMakeLists.txt  README.md
include/QuadTree/: Box.h  QuadTree.h  Vector2.h
src/: main.cpp
